common-applications/control/community-etherpad/mindspore/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-etherpad
  name: mindspore-etherpad
