common-applications/control/community-etherpad/mindspore/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: repo-nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ^~ /admin {
        deny all;
      }
      location ^~ /stats {
        deny all;
      }
  name: mindspore-ingress
  namespace: mindspore-etherpad
spec:
  rules:
  - host: etherpad.mindspore.cn
    http:
      paths:
      - backend:
          serviceName: etherpad-lite
          servicePort: 80
        path: /
  tls:
  - hosts:
    - etherpad.mindspore.cn
    secretName: etherpad-mindspore-tls
